recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value spierpinski
    spierpinski(level-1, length/2)
    ^Sierpinski:5: error: not found: value spierpinski
    spierpinski(level-1, length/2)
    ^Sierpinski:8: error: not found: value spierpinski
    spierpinski(level-1, length/2)
    ^Sierpinski:11: error: not found: value spierpinski
    spierpinski(level-1, length/2)
    ^