recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(level>(-1)){
    spierpinski(level-1, length/2)
    avance(length)
    droite(120)
    spierpinski(level-1, length/2)
    avance(length)
    droite(120)
    spierpinski(level-1, length/2)
    avance(length)
    droite(120)
    spierpinski(level-1, length/2)
    avance(length)
    droite(120)
    sierpinski(level-1,length/2)
  }
}